Empty "Only Axis Aligned" viewing angle depends on object scale, stops working on very small values #97004

Closed
opened 2022-04-03 20:01:08 +02:00 by Thomas Radeke · 6 comments

System Information
Operating system: Windows 10
Graphics card: GTX 1070

Blender Version
Broken: 3.1.2, 3.0.0, 2.93.5
Worked: never?

Short description of error
When adding a background or reference image Empty and enabling "Only Axis Aligned", there is a small angular tolerance where the view is still considered "axis aligned". This tolerance seems to increase drastically with smaller Empty scales, up to the point where the image is always shown from all angles, despite the "Only Axis Aligned" option being enabled (for scales smaller than 0.005 mostly).

A workaround is to set the Image Size to smaller values and keeping the Empty scale close to 1.

Exact steps for others to reproduce the error

  • Create a new background/reference image
  • In the Empty settings, enable "Only Axis Aligned"
  • Scale the empty to very small values
  • View the image from an axis aligned direction and slowly rotate away, notice that the image takes quite a large angle to become invisible.
  • From any viewing direction, scale the Empty below values of ~ 0.005 and notice the "Only Axis Aligned" option losing its function.

I'm not sure if this is a technical limitation but it feels like unintended behavior. Keeping in mind to use the Image Size option instead of object scale is a good workaround (and probably the intended way to do it), but might be hard to discover for users.

**System Information** Operating system: Windows 10 Graphics card: GTX 1070 **Blender Version** Broken: 3.1.2, 3.0.0, 2.93.5 Worked: never? **Short description of error** When adding a background or reference image Empty and enabling "Only Axis Aligned", there is a small angular tolerance where the view is still considered "axis aligned". This tolerance seems to increase drastically with smaller Empty scales, up to the point where the image is always shown from all angles, despite the "Only Axis Aligned" option being enabled (for scales smaller than 0.005 mostly). A workaround is to set the Image Size to smaller values and keeping the Empty scale close to 1. **Exact steps for others to reproduce the error** - Create a new background/reference image - In the Empty settings, enable "Only Axis Aligned" - Scale the empty to very small values - View the image from an axis aligned direction and slowly rotate away, notice that the image takes quite a large angle to become invisible. - From any viewing direction, scale the Empty below values of ~ 0.005 and notice the "Only Axis Aligned" option losing its function. I'm not sure if this is a technical limitation but it feels like unintended behavior. Keeping in mind to use the Image Size option instead of object scale is a good workaround (and probably the intended way to do it), but might be hard to discover for users.
Author

Added subscriber: @ThomasRadeke

Added subscriber: @ThomasRadeke
Member

Added subscriber: @OmarEmaraDev

Added subscriber: @OmarEmaraDev
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Looks like a bug indeed. Not sure what the most appropriate module is, but tagging the modules listed in the design task.

Looks like a bug indeed. Not sure what the most appropriate module is, but tagging the modules listed in the design task.

This issue was referenced by 2e3edb6995

This issue was referenced by 2e3edb6995d31c762382aa0ad6781807bac30377
Philipp Oeser self-assigned this 2022-04-05 17:22:29 +02:00
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#97004
No description provided.